--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,19 @@
 				<version>3.1</version>
 				<configuration>
 					<executable>C:/Program Files/Java/jdk1.8.0_191/bin/javac</executable>
-					<source>1.8</source>
-					<target>1.8</target>
-					<useIncrementalCompilation>yes</useIncrementalCompilation>
+					<source>15</source>
+					<target>15</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.21.0</version>
+				<configuration>
+					<suiteXmlFiles>
+						<!-- suiteXmlFile>${suiteXml}</suiteXmlFile>  -->
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -24,7 +34,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>6.14.3</version>
+			<version>7.0.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
